minor alignment fixes

--- a/components/carouselContent/carouselContent.css
+++ b/components/carouselContent/carouselContent.css
@@ -23,13 +23,14 @@
     padding: 50px 90px 60px;
 }
 .carousel-inner {
-    height: 370px;
+    min-height: 370px;
+    display: inline-table;
 }
 .carousel .item {
     height: 100%;
 }
 .carousel .item .inner-slide {
-    display: inline-block;
+    display: inline-table;
     float: left;
     width: 32.66%;
     height: 100%;
@@ -71,7 +72,7 @@
 }
 .inner-slide p {
     line-height: 1.57;
-    margin: 28px 40px 0;
+    margin: 28px 40px 40px;
     text-align: left;
 }
 /* Reposition the controls slightly */
