--- a/components/footerContent/footerContent.css
+++ b/components/footerContent/footerContent.css
@@ -18,9 +18,6 @@
 	width:31px;
 	cursor: pointer;
 }
-.description {
-	text-align: justify;
-}
 .social-media-icons:last-child {
 	margin-right: 0;
 }
